Fixed all remarks except error handling
